--- a/lang/browser/index.html
+++ b/lang/browser/index.html
@@ -4,10 +4,12 @@
         <title>Jessie Frame</title>
     </head>
     <body>
-        <script type="text/javascript" src="./jessica.mjs"></script>
+        <script type="text/javascript" src="./jessica.js"></script>
         <h1>Jessie Frame</h1>
-        <p>TODO: This demo uses Jessica to validate that all scripts loaded
-            by the frame are valid Jessie.
-        </p>
+        <p>TODO: This demo should use a jessie-frame element.</p>
+
+        <p>For now, you can try the following in your browser console:</p>
+
+        <pre>await jessica.translate('export default 123;', {})</pre>
     </body>
 </html>
