--- a/lang/browser/index.html
+++ b/lang/browser/index.html
@@ -9,6 +9,8 @@
 
         <p>For now, you can try the following in your browser console:</p>
 
-        <pre>await jessica.translate('export default 123;', {})</pre>
+        <pre>await jessica.translate('export default 123;',
+{sourceType: 'jessie', target: 'jessie-frame', targetType: 'function'})
+        </pre>
     </body>
 </html>
