Relax insulation of non-imported useVars.

--- a/lang/browser/index.html
+++ b/lang/browser/index.html
@@ -23,7 +23,7 @@ const main = insulate((deps) => {
     const say = (s) => deps.writeOutput('-', s + '\n');
     say('Hello, world!');
 });
-export default insulate(main);</textarea>
+export default main;</textarea>
         <button id="btnRun">Run</button>
         
         <pre id="outputPre">
