Excise .mjs deux

--- a/lang/browser/index.html
+++ b/lang/browser/index.html
@@ -9,7 +9,7 @@
             width: 100%;
         }
         </style>
-        <script type="text/javascript" src="./jessica.mjs"></script>
+        <script type="text/javascript" src="./jessica.js"></script>
         <h1>Browser-Based Jessica</h1>
 
         <p>Write your Jessie code below:</p>
